test/speg_grammar_fixtures/valid/grammar_lower_undescore.peg
GRAMMAR lower_case_underscore

test -> "test";