test/speg_grammar_fixtures/invalid/grammar_numbers_at_start.peg
GRAMMAR 123numbers

test -> "test";